--- a/source/_posts/2022-03-13-astc.markdown
+++ b/source/_posts/2022-03-13-astc.markdown
@@ -207,6 +207,16 @@ decoded_dim = dim[0] + (dim[1] << 8) + (dim[2] << 16);
 ```
 
 
+
+不过 Unity里的 astc的图片头信息， 是记录在.meta 文件里的， 即通过 Asset Importer导入之后， 打包或者生成 Assetbundle 是 strip 掉16 位头信息的。  因此， 对于 Assets文件夹里的.astc资源 你可以通过Resources.Load<Texture2D>("path") 或者 AssetDatabase.LoadAssetAtPath<Texture2D>("path")能够正确的加载 .astc 图片。  但是如果你的.astc图片是有云侧/服务器（比如 docker）生成的， 如果你通过 Texture2D.LoadRowTextureData 得到的图片就会显示左侧有像素偏差。如下图所示：
+
+
+  ![](/img/post-engine/astc12.jpg)
+
+
+因此要正确显示astc的图片， 需要在LoadRowTextureData的时候裁剪调16位头信息， 这也是unity 处理astc时候与原生图片的差异的地方。
+
+
 ##  转换ASTC图片
 
 使用 [astc-encoder][i2] 不仅可以将 jpg、png、tga 这些 LDR 的图片转换成 atsc，还支持了 HDR， 比如说： .exr .hdr等格式的图片
@@ -218,10 +228,19 @@ decoded_dim = dim[0] + (dim[1] << 8) + (dim[2] << 16);
 astcenc -tl example.png example.tga 5x5 -thorough
 ```
 
+默认的话， astcenc 生成的图片y 方向是反着的， 因此需要在生成的时候需要进行额外的翻转， 可以再加一个参数来做翻转
+
+```sh
+astcenc -tl example.png example.tga 5x5 -thorough -yflip
+```
+
+
 除此之外， 还有界面话的工具 [Mali_Texture_Compression_Tool][i3] 也支持进行转换， 比如说 ARM 官方开发了一款 gui 的工具， 不仅支持图片转换， 还支持动态的和原图进行 逐像素 对比。
 
 
 ![](/img/post-engine/astc2.jpg)
+
+
 
 
 [i1]: https://github.com/ARM-software/astc-encoder/blob/main/Docs/FormatOverview.md
