--- a/source/_posts/2022-03-13-astc.markdown
+++ b/source/_posts/2022-03-13-astc.markdown
@@ -9,9 +9,15 @@ tags:
 
 
 
-> Adaptive Scalable Texture Compression (ASTC)是Arm和AMD共同研发的一种纹理压缩格式，不同于ETC和ETC2的固定块尺寸（4x4），ASTC支持可变块大小的压缩，从而获得灵活的更大压缩率的纹理数据，降低GPU的带宽和能耗。 ASTC虽然尚未成为OpenGL的标准格式，只是以扩展的形式存在，但目前已经广泛地被主流GPU支持，可谓不是标准的的标准扩展。但在Vulkan中，ASTC已经是标准的特性了。
+>在大多数情况下，纹理是用二维图像表示的。然而，标准的压缩算法(RLE, LZW, Deflate)和流行的压缩图像格式(JPEG, PNG, TIFF)并不适合纹理。传统压缩算法的主要问题是无法实现对内存中整个纹理的其中一块Texel随机访问——不解压整个纹理，就不可能解压一个特定的texel。纹理访问模式是高度随机的：渲染时只使用需要的部分纹理，并且访问的顺序无法提前预知。因此，图形子系统的整体性能在很大程度上取决于纹理访问的效率。“随机存取”的需求决定了各种纹理压缩格式的主要特征。如果没有各种类型的纹理，3D计算机图形的世界是不可想象的。这些各种各样的纹理元素极大地提高了3D对象的视觉质量和细节水平，而不会增加几何复杂性。简单纹理是把二维图像直接映射到三维表面。图像的单个像素称为Texels(纹理元素)。纹理不仅可以存储颜色，还可以存储高度，法线方向，反射因子和其他每个Texel信息。现代游戏和3D应用消耗大量内存，其中超过一半的内存被纹理占用。这导致了对内存大小和带宽的严苛要求。各种纹理压缩技术被广泛采用，以减少对内存和带宽的压力。在这种情况下，纹理存储在内存中并以压缩形式传送到GPU。解压缩只发生在GPU内部，通常在L1和L2缓存之间。这种方法减少了纹理内存占用。最重要的是，这种压缩还可以节省带宽，这是一种非常宝贵的资源。纹理压缩还可以降低功耗，因为GPU到VRAM的数据传输就意味着为功耗。这对于笔记本电脑、平板电脑和智能手机等移动设备尤为重要。
 
 
+基于压缩算法的特征，提供了现代PC、平板电脑和智能手机中使用的纹理压缩技术及其硬件实现的详细分析和比较，例如压缩率和图像质量。首先最早被大量使用的压缩方案系列，S3TC（BC1-BC3）。然后转到了BC4，BC5，BC6H和BC7格式，它们通过提供更大的灵活性以及引入块分区改善了图像质量。然后由爱立信针对的移动端设备开发的ETC系列算法（Packman，ETC1（iPackman）和ETC2 / EAC），以及由Imagination Technologies公司发明的PVRTC系列格式。最后由AMD和ARM的协作产生的最新的纹理压缩技术ASTC。
+
+
+# ASTC
+
+ Adaptive Scalable Texture Compression (ASTC)是Arm和AMD共同研发的一种纹理压缩格式，不同于ETC和ETC2的固定块尺寸（4x4），ASTC支持可变块大小的压缩，从而获得灵活的更大压缩率的纹理数据，降低GPU的带宽和能耗。 ASTC虽然尚未成为OpenGL的标准格式，只是以扩展的形式存在，但目前已经广泛地被主流GPU支持，可谓不是标准的的标准扩展。但在Vulkan中，ASTC已经是标准的特性了。
 
 
 
@@ -53,11 +59,11 @@ ASTC_6X6X6
 * 格式矩阵全覆盖。在ASTC尚未出现之前，传统的纹理压缩格式支持的颜色格式和比特率的组合相对较少，如下图所示：
 
 
-![](/img/post-engine/astc1.png)
+![](../img/post-engine/astc1.png)
 
 以上格式还受图形API或操作系统限制，因此任何单一平台的压缩选择都非常有限。ASTC的出现解决了上述问题，几乎实现了所需格式矩阵的完整覆盖，为内容创建者提供了广泛的比特率选择。下图显示了可用的格式和比特率：
 
-![](/img/post-engine/astc2.png)
+![](../img/post-engine/astc2.png)
 
 ASCT是如何达成上述目标的呢？答案就在于ASTC用了一种特殊的压缩算法和数据结构。ASTC的算法技术要点和阐述如下：
 
@@ -72,7 +78,7 @@ ASCT是如何达成上述目标的呢？答案就在于ASTC用了一种特殊的
 
   ASTC中的2D Block footprints范围从4x4 texels到12x12 texels，它们都被压缩成128位输出块。通过将128位除以占用空间中的像素数，便能得到格式比特率，这些比特率范围从8 bpt $ (128 / (4\cdot4)) $ 到0.89 bpt ($128 / (12\cdot12))$ 。下面是不同比特率的画质对比图：
 
-  ![](/img/post-engine/astc3.png)
+  ![](../img/post-engine/astc3.png)
 
 * 颜色端点（Color endpoint）
 
@@ -89,12 +95,12 @@ ASCT是如何达成上述目标的呢？答案就在于ASTC用了一种特殊的
 
   块内的颜色通常是复杂的，单色渐变通常不能准确地捕捉块内的所有颜色。例如，躺在绿色草地上的红球，需要进行两种颜色的划分，如下图所示：
 
-  ![](/img/post-engine/astc4.png)
+  ![](../img/post-engine/astc4.png)
 
 
   ASTC允许单个块最多引用四个颜色梯度，称为分区。为了解压，每个texel被分配到一个单独的分区。直接存储每个texel的分区分配将需要大量的解压缩硬件来存储所有块大小。 相反，ASTC使用分区索引作为seed值，以算法生成一系列模式。压缩过程为每个块选择最佳匹配的模式，然后块只需要存储最佳匹配模式的索引。下图显示了8 × 8块大小的2个(图像顶部)、3个(图像中间)和4个(图像底部)分区生成的模式：
 
-  ![](/img/post-engine/astc5.png)
+  ![](../img/post-engine/astc5.png)
 
 
   可以在每个块的基础上选择分区的数量和分区索引，并且可以在每个分区上选择不同的颜色端点模式。
@@ -103,19 +109,19 @@ ASCT是如何达成上述目标的呢？答案就在于ASTC用了一种特殊的
 
   ASTC使用渐变来指定每个texel的颜色值。每个压缩块存储渐变的端点颜色，以及每个像素的插值权重。在解压过程中，每个像素的颜色值是根据每个像素的权重在两个端点颜色之间插值生成的。下图显示了各种texel权重的插值：
 
-  ![](/img/post-engine/astc6.png)
+  ![](../img/post-engine/astc6.png)
 
   方块通常包含复杂的颜色分布，例如一个红色的球放在绿色的草地上。在这些情况下，单一的颜色梯度不能准确地代表所有不同的texel颜色值。 ASTC允许一个块定义多达四个不同的颜色梯度，称为分区（partition），并可以将每个texel分配到一个单独的分区。下图显示了分区索引是如何为每个texel指定颜色渐变的（两个分区，一个用于红球像素，一个用于绿草像素）:
 
 
-  ![](/img/post-engine/astc7.png)
+  ![](../img/post-engine/astc7.png)
 
 
 * 存储字符表（Storing alphabet）
 
   尽管每个像素的颜色和权重值理论上是浮点值，但可以直接存储实际值的位太少了。为了减小存储大小，必须在压缩期间对这些值进行量化。例如，如果对0.0到1.0范围内的每个texel有一个浮点权重，可以选择量化到5个值:0.0、0.25、0.5、0.75和1.0，再使用整数0-4来表示存储中的这五个量化值。一般情况下，如果选择量化N层，需要能够有效地存储包含N个符号的字符表中的字符。一个N个符号表包含每个字符的log2(N)位信息。如果有一个由5个可能的符号组成的字符表，那么每个字符包含大约2.32位的信息，但是简单的二进制存储需要四舍五入到3位，这浪费了22.3%的存储容量。下图表显示了使用简单的二进制编码存储任意N个符号字符表所浪费的位空间百分比:
 
-  ![](/img/post-engine/astc8.png)
+  ![](../img/post-engine/astc8.png)
 
 
   上述图表显示，对于大多数字符大小，使用整数位每个字符浪费大量的存储容量。对于压缩格式来说，效率是至关重要的，因此这是ASTC需要解决的问题。一种解决方案是将量化级别四舍五入到2的下一次方，这样就不用浪费额外的比特了。然而，这种解决方案迫使编码器消耗了本可以在其它地方使用获得更大收益的比特位，因此此方案降低了图像质量，并非最优解决方案。
@@ -146,7 +152,7 @@ ASCT是如何达成上述目标的呢？答案就在于ASTC用了一种特殊的
   压缩器选择为所存储的字母大小产生最小存储空间的选项。一些使用二进制，一些使用bit和trit，还有一些使用bit和quint。下图显示了BISE存储相对于二进制存储的效率增益：
 
 
-  ![](/img/post-engine/astc9.png)
+  ![](../img/post-engine/astc9.png)
 
 
   此外，在压缩过程中，会为每个块选择最佳编码，在计算texel权重值时，除了上述的BISE，还有双平面权重（Dual-plane weights）算法。
@@ -160,13 +166,13 @@ GL_ANDROID_extension_pack_es31a
 
 相比传统的纹理压缩格式（ETC、BC、PVRTC等），使用ASTC的压缩效果非常明显，画质更贴近原图，压缩率更高
 
-  ![](/img/post-engine/astc10.png)
+  ![](../img/post-engine/astc10.png)
   左：原始法线贴图；中：压缩成ETC的效果；右：压缩成ASTC的效果。
 
 
 由此带来的直观收益就是占用更少的内存、带宽，每帧大约能减少24.4%的带宽：
 
-![](/img/post-engine/astc11.png)
+![](../img/post-engine/astc11.png)
 
 
 ## astc文件头
@@ -174,7 +180,7 @@ GL_ANDROID_extension_pack_es31a
 astc 图片可以直接在mac finder里预览， 尽管 .astc 只能在 arm处理器进行运行时解压， mac finder 里应该是在 cpu 上解压成 rgba 格式图片
 
 
-![](/img/post-engine/astc1.jpg)
+![](../img/post-engine/astc1.jpg)
 
 
 ```c
@@ -214,7 +220,7 @@ decoded_dim = dim[0] + (dim[1] << 8) + (dim[2] << 16);
 可以确定的是 Unity 里的 astc的图片头信息， 是记录在.meta 文件里的， 即通过 Asset Importer导入之后， 打包或者生成 Assetbundle 是 strip 掉16 位头信息的。  因此， 对于 Assets文件夹里的.astc资源 你可以通过Resources.Load<Texture2D>("path") 或者 AssetDatabase.LoadAssetAtPath<Texture2D>("path")能够正确的加载 .astc 图片。  但是如果你的.astc图片是有云侧/服务器（比如 docker）生成的， 如果你通过 Texture2D.LoadRowTextureData 得到的图片就会显示左侧有像素偏差。如下图所示：
 
 
-  ![](/img/post-engine/astc12.jpg)
+  ![](../img/post-engine/astc12.jpg)
 
 
 因此要正确显示astc的图片， 需要在LoadRowTextureData的时候裁剪调16位头信息， 这也是unity 处理astc时候与原生图片的差异的地方。 如果不考虑效率（）， 可以参考如下代码：
@@ -240,7 +246,7 @@ if (GUILayout.Button("load", GUILayout.MinWidth(120)))
 
 通过 asset impoter 导入的 astc 图片， 默认是不解析 hdr的图片， 即 hdr图片也是按照 ldr的图片来解析的， 因此hdr-astc图片导入之后显示肯定是不正确的， 比如上图的美女就变成这样的球样：
 
-![](/img/post-engine/astc13.jpg)
+![](../img/post-engine/astc13.jpg)
 
 因此， 通过AssetDatabase.LoadAssetAtPath、Resources.Load、AssetBundle.Load 等相关的接口都是拿不到正确的结果的， 这些都是以 ldr的方式读取的。
 
@@ -283,7 +289,7 @@ astcenc -tl example.png example.tga 5x5 -thorough -yflip
 除此之外， 还有界面话的工具 [Mali_Texture_Compression_Tool][i3] 也支持进行转换， 比如说 ARM 官方开发了一款 gui 的工具， 不仅支持图片转换， 还支持动态的和原图进行 逐像素 对比。
 
 
-![](/img/post-engine/astc2.jpg)
+![](../img/post-engine/astc2.jpg)
 
 
 
