--- a/source/_posts/2023-06-18-gtest.markdown
+++ b/source/_posts/2023-06-18-gtest.markdown
@@ -171,7 +171,7 @@ public:
 ```
 MOCK_METHOD#1(#2, #3(#4) )
 ```
-\#2是你要mock的方法名称！#1表示你要mock的方法共有几个参数，#4是这个方法具体的参数，#3表示这个方法的返回值类型。很简单不是？！
+\#2是你要mock的方法名称！#1表示你要mock的方法共有几个参数，#4是这个方法具体的参数，#3表示这个方法的返回值类型。很简单不是？
 
 
 ```c++
